--- a/src/header.html
+++ b/src/header.html
@@ -81,9 +81,10 @@
   }
   .gnb-sub-menu {
     margin: 0 auto;
-    max-width: 1280px;
+    width: 1280px;
     height: 100%;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
     gap: 24px;
   }
@@ -241,7 +242,7 @@
       <!-- pc 메뉴-->
       <ul class="gnb-menu">
         <li class="gnb-menu-item">
-          <a href="#">신도관리프로그램 수비라</a>
+          <a href="./brand-story.html">신도관리프로그램 수비라</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
               <li><a href="./brand-story.html">브랜드 스토리</a></li>
@@ -253,7 +254,7 @@
           </div>
         </li>
         <li class="gnb-menu-item">
-          <a href="#">출력물 소개</a>
+          <a href="./output.html?tab=item1">출력물 소개</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
               <li><a href="./output.html?tab=item1">연등꼬리표</a></li>
@@ -263,7 +264,7 @@
           </div>
         </li>
         <li class="gnb-menu-item">
-          <a href="#">사찰 홈페이지 제작</a>
+          <a href="./portfolio.html">사찰 홈페이지 제작</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
               <li><a href="./portfolio.html">포트폴리오</a></li>
@@ -272,7 +273,7 @@
           </div>
         </li>
         <li class="gnb-menu-item">
-          <a href="#">문의 하기</a>
+          <a href="./contact-us.html">문의 하기</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
               <li><a href="./contact-us.html">문의하기</a></li>
@@ -302,7 +303,7 @@
             <a href="./index.html">홈</a>
           </li>
           <li class="modal-gnb-menu-item">
-            <a href="#">신도관리프로그램 수비라</a>
+            <a href="./brand-story.html">신도관리프로그램 수비라</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
                 <li><a href="./brand-story.html">브랜드 스토리</a></li>
@@ -314,7 +315,7 @@
             </div>
           </li>
           <li class="modal-gnb-menu-item">
-            <a href="#">출력물 소개</a>
+            <a href="./output.html?tab=item1">출력물 소개</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
                 <li><a href="./output.html?tab=item1">연등꼬리표</a></li>
@@ -324,7 +325,7 @@
             </div>
           </li>
           <li class="modal-gnb-menu-item">
-            <a href="#">사찰 홈페이지 제작</a>
+            <a href="./portfolio.html">사찰 홈페이지 제작</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
                 <li><a href="./portfolio.html">포트폴리오</a></li>
@@ -333,7 +334,7 @@
             </div>
           </li>
           <li class="modal-gnb-menu-item">
-            <a href="#">문의 하기</a>
+            <a href="./contact-us.html">문의 하기</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
                 <li><a href="./contact-us.html">문의하기</a></li>
